@@ -6,7 +6,7 @@ Things that we want to do
 Pick new default port, 8080 is too common
 Pass different port number in ARGV
 Have a generic error page, and push all errors to it
-Fix links in POD to go back to us
+Fix links in POD to go back to us (when it is pod and not code)
 Only index with KinoSearch if minicpan has changed
 
 
